ingress/four.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: four
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ap
  template:
    metadata:
      labels:
        app: ap
    spec:
      containers:
      - name: cont-4
        image: nginx:alpine
        ports:
        - containerPort: 80
        command: ["/bin/sh"]
        args:
        - "-c"
        - |
          echo "server {
            listen 80;
            server_name _;
            location / {
              return 404;
            }
            location = /health {
              return 200 'OK\n';
            }
          }" > /etc/nginx/conf.d/default.conf &&
          nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: error-service
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: ap
