ingress/three.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: three
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gm
  template:
    metadata:
      labels:
        app: gm
    spec:
      containers:
      - name: cont-3
        image: shaikmustafa/mygame
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: game
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: gm
